--- a/react-app/src/components/Meetings/Meetings.module.css
+++ b/react-app/src/components/Meetings/Meetings.module.css
@@ -4,9 +4,9 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: 100%;
-  padding-top: 100px;
+  margin: 100px 0;
 }
 
 
@@ -18,5 +18,4 @@
   flex-wrap: wrap;
   width: 70%;
   gap: 50px;
-  margin: 50px;
 }
